--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
 Django==3.2.11
+djongo==1.3.6
+dnspython==2.2.1
+numpy==1.22.4
+pandas==1.4.2 
+pymongo==4.1.1
+python-dateutil==2.8.2
+python-dotenv==0.20.0
+six==1.16.0
+sqlparse==0.2.4
+
