--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+et-xmlfile==1.1.0
 Django==3.2.11
 djongo==1.3.6
 dnspython==2.2.1
 numpy==1.22.4
+openpyxl==3.0.10
 pandas==1.4.2 
 pymongo==4.1.1
 python-dateutil==2.8.2
