--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 et-xmlfile==1.1.0
 Django==3.2.11
+django-cors-headers==3.13.0
+djangorestframework==3.13.1
 djongo==1.3.6
 dnspython==2.2.1
 numpy==1.22.4
