--- a/cr_ita/Procfile
+++ b/cr_ita/Procfile
@@ -1,4 +1,4 @@
 release: python manage.py makeigrations
 --no-input
 release: python manage.py migrate --no-input
-web: gunicorn cmbackend.wsgi
+web: gunicorn app:app
