--- a/cr_ita/Procfile
+++ b/cr_ita/Procfile
@@ -1,5 +1,2 @@
-release: python manage.py makemigrations --no-input
-release: python manage.py migrate --no-input
-heroku: ps scale web=1
-web: npm start
+heroku ps: scale web=1
 web: gunicorn cmbackend.wsgi
